[gd_scene load_steps=5 format=2]

[ext_resource path="res://CharacterRig.tscn" type="PackedScene" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://PlayerFSM.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 36 )

[node name="player" type="KinematicBody2D"]
position = Vector2( 72, 536 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="PlayerFSM" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Body" type="Node2D" parent="."]

[node name="CharacterRig" parent="Body" instance=ExtResource( 1 )]

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 276, -102 )
scale = Vector2( 2, 2 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0
limit_right = 1024
limit_bottom = 600
limit_smoothed = true
smoothing_enabled = true
offset_v = 0.17
drag_margin_left = 1.0
drag_margin_top = 0.57
drag_margin_right = 0.0
drag_margin_bottom = 0.5
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="DropThruRayCasts" type="RayCast2D" parent="."]
enabled = true

[node name="DropThruRaycasts" type="Node2D" parent="."]

[node name="Raycasts" type="Node2D" parent="."]

[node name="RayCast2D1" type="RayCast2D" parent="Raycasts"]
position = Vector2( -18, 24 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 3

[node name="RayCast2D2" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 24 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 3

[node name="RayCast2D3" type="RayCast2D" parent="Raycasts"]
position = Vector2( 18, 24 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 3

[node name="DirectionInput_rayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 24, 0 )
collision_mask = 4096

[connection signal="throw_item" from="Body/CharacterRig" to="." method="_throw_held_item"]
